Fixed alignments for featured items.

--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -111,7 +111,10 @@ h1 {
 }
 
 .img-result {
+    object-fit: cover;
     max-height: 25em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #results > .col-md-4:nth-child(3n+1) {
@@ -121,3 +124,12 @@ h1 {
 a:hover {
     text-decoration: none;
 }
+
+#featured .col-result {
+    vertical-align: bottom;
+}
+
+
+
+
+
